📖 Update currently reading

--- a/content/index.njk
+++ b/content/index.njk
@@ -118,9 +118,9 @@ scripts: '
 			body = '
 			<ol class="unstyled mb-0">
 				<li>
-					<a href="https://app.thestorygraph.com/books/82280be4-3a48-4768-8c46-0ad3d44f00e9" class="hidden">The Eye of the World - Robert Jordan</a>
+					<a href="https://app.thestorygraph.com/books/e66f3c2a-df07-46a6-b430-f42950666fd9" class="hidden">The Ministry of Time - Kaliane Bradley</a>
 					<small class="d-b subtext">
-						10/12/24</span>
+						12/02/25</span>
 					</small>
 				</li>
 				<li>
@@ -130,7 +130,7 @@ scripts: '
 			'
 		)}}
 	</div>
-	<div class="dashboard__item">
+	{# <div class="dashboard__item">
 		{{ macro.callout(
 			element = 'article',
 			modifiers = 'callout--small',
@@ -147,7 +147,7 @@ scripts: '
 			</ol>
 			'
 		)}}
-	</div>
+	</div> #}
 	<section>
 		<article class="dashboard__item dashboard__item--card dashboard__item--latestposts" aria-labelledby="latestposts--title">
 			<header>
