--- a/assets/css/base/_typography.css
+++ b/assets/css/base/_typography.css
@@ -115,3 +115,10 @@ blockquote cite::before {
 blockquote p:last-child {
   margin-bottom: 0;
 }
+
+@media (min-width: 992px) {
+  figure.card {
+      margin-left: -3rem;
+      margin-right: -3rem;
+    }
+}
