📖 Update currently reading

--- a/content/index.njk
+++ b/content/index.njk
@@ -118,9 +118,15 @@ scripts: '
 			body = '
 			<ol class="unstyled mb-0">
 				<li>
-					<a href="https://app.thestorygraph.com/books/e66f3c2a-df07-46a6-b430-f42950666fd9" class="hidden">The Ministry of Time - Kaliane Bradley</a>
+					<a href="https://app.thestorygraph.com/books/536ef25c-0b0f-48e8-a6bb-67856f21a223" class="hidden">Welsh Witchcraft</a>
 					<small class="d-b subtext">
-						12/02/25</span>
+						Mhara Starling
+					</small>
+				</li>
+				<li>
+					<a href="https://app.thestorygraph.com/books/00813a4b-aefd-4887-a548-20901aae5c0d" class="hidden">Moon Spells</a>
+					<small class="d-b subtext">
+						Diane Ahlquist
 					</small>
 				</li>
 				<li>
