--- a/content/experiments/valentines-ascii-heart.njk
+++ b/content/experiments/valentines-ascii-heart.njk
@@ -7,7 +7,8 @@ rss: true
 style: '
 .iheartu {column-width: 400px;}
 .iheartu>*{margin-bottom: 1rem;}
-pre { line-height: 1.1;}'
+pre { line-height: 1.1;}
+figure.card {margin-left: 0; margin-right: 0;}'
 ---
 {% block main %}
 <pre role="img" aria-label="Happy Valentines Day">
