--- a/assets/css/base/_typography.css
+++ b/assets/css/base/_typography.css
@@ -87,12 +87,15 @@ em {
   font-size: 80%;
 }
 
+.blockquote,
 blockquote {
-  border-left: 3px solid var(--quote);
   margin-left: 0;
   padding-left: 1.5rem;
   margin: 0 0 1rem 0;
   color: var(--quote);
+  background-color: var(--bodybg);
+  padding: 0.5rem 1rem;
+  border-radius: 1rem 1rem 1rem 0;
 }
 
 blockquote cite {
@@ -117,7 +120,7 @@ blockquote p:last-child {
 }
 
 @media (min-width: 992px) {
-  figure.card {
+  .reading-width figure.card {
       margin-left: -3rem;
       margin-right: -3rem;
     }
