--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -42,3 +42,4 @@
 @import url('./pages/_bloglist.css');
 @import url('./pages/_bookmarkslist.css');
 @import url('./pages/_experimentslist.css');
+@import url('./pages/_sitemap.css');
