--- a/content/collections/art.njk
+++ b/content/collections/art.njk
@@ -1,10 +1,6 @@
 ---
 title: Art
-description: Collection of drawings and doodles
-eleventyNavigation:
-  key: Art
-  emoji: <span class="emoji" aria-hidden="true">🎨</span>
-  order: 2
+description: Drawings and doodles
 rss: true
 date: 2024-06-03
 ---
