--- a/structure/pages/list-bookmarks.njk
+++ b/structure/pages/list-bookmarks.njk
@@ -11,7 +11,9 @@
 				{% if bookmark.data.url %}
 				<p class="card__url"><img src="https://v1.indieweb-avatar.11ty.dev/{{ bookmark.data.url | encodeUrl}}" class="card__favicon" loading="lazy" alt="">{{ bookmark.data.url }}</p>
 				{% endif %}
+				{% if bookmark.data.description %}
 				<p class="card__description">{{bookmark.data.description | safe }}</p>
+				{% endif %}
 			</div>
 		</article>
 	{% endfor %}
