--- a/assets/css/pages/_experimentslist.css
+++ b/assets/css/pages/_experimentslist.css
@@ -1,3 +1,4 @@
+.collections.cards,
 .experiments.cards {
   display: grid;
   grid-template-columns: 1fr;
@@ -5,12 +6,14 @@
 }
 
 @media (min-width: 768px) {
+  .collections.cards,
   .experiments.cards {
     grid-template-columns: 1fr 1fr;
   }
 }
 
 @media (min-width: 1200px) {
+  .collections.cards,
   .experiments.cards {
     grid-template-columns: 1fr 1fr 1fr;
   }
