--- a/content/index.njk
+++ b/content/index.njk
@@ -1,7 +1,6 @@
 ---
 title: Home
 rss: false
-nocache: '2025'
 scripts: '
 	<script>
 	const n = new Date(),
@@ -58,10 +57,10 @@ scripts: '
 	</div>
 	<div class="dashboard__item">
 		<h2 class="visually-hidden">Shrines</h2>
-		<a href="/shrine/orla" class="gallery" aria-label="Orla (my dog) shrine">
-			<img src="/images/shrine/orla/orla1.jpg" width="100" height="100" alt="" loading="lazy" title="My shrine to Orla!">
-			<img src="/images/shrine/orla/orla16.jpg" width="100" height="100" alt="" loading="lazy" title="My shrine to Orla!">
-			<img src="/images/shrine/orla/orla17.jpg" width="100" height="100" alt="" loading="lazy" title="My shrine to Orla!">
+		<a href="/collections/orla" class="gallery" aria-label="Orla (my dog) shrine">
+			<img src="/images/collections/orla/orla1.jpg" width="100" height="100" alt="" loading="lazy" title="My shrine to Orla!">
+			<img src="/images/collections/orla/orla16.jpg" width="100" height="100" alt="" loading="lazy" title="My shrine to Orla!">
+			<img src="/images/collections/orla/orla17.jpg" width="100" height="100" alt="" loading="lazy" title="My shrine to Orla!">
 		</a>
 	</div>
 	<article class="dashboard__item">
