--- a/structure/global/footer.njk
+++ b/structure/global/footer.njk
@@ -11,6 +11,7 @@
                         <li><span class="emoji" aria-hidden="true">⬆️</span> <a href="#top">Back to top</a></li>
                         <li><span class="emoji" aria-hidden="true">♿</span> <a href="/accessibility">Accessibility</a>
                         <li><span class="emoji" aria-hidden="true">👩‍💻</span> <a href="/colophon">Colophon</a>
+                        <li><span class="emoji" aria-hidden="true">🗺️</span> <a href="/sitemap">Site Map</a>
                     </ul>
                 </nav>
                 <div class="h-card vcard">
