🪐 Change Collections to Curios

--- a/assets/css/pages/_experimentslist.css
+++ b/assets/css/pages/_experimentslist.css
@@ -1,4 +1,4 @@
-.collections.cards,
+.curios.cards,
 .experiments.cards {
   display: grid;
   grid-template-columns: 1fr;
@@ -6,14 +6,14 @@
 }
 
 @media (min-width: 768px) {
-  .collections.cards,
+  .curios.cards,
   .experiments.cards {
     grid-template-columns: 1fr 1fr;
   }
 }
 
 @media (min-width: 1200px) {
-  .collections.cards,
+  .curios.cards,
   .experiments.cards {
     grid-template-columns: 1fr 1fr 1fr;
   }
