--- a/content/links.njk
+++ b/content/links.njk
@@ -554,7 +554,7 @@ scripts: '<script>
 
 <section>
   <h2 class="visually-hidden">Links to other websites</h2>
-  <ul class="links">
+  <ul class="links unstyled">
     {% for link in links | sort(attribute="name") %}
     {% if link.type == "button" %}
     <li class="links__image">
