--- a/content/links.njk
+++ b/content/links.njk
@@ -27,11 +27,6 @@ scripts: '<script>
     "src": "32bitcafe.png",
     "type": "button"
   }, {
-    "name": "Accessible Net",
-    "href": "https://pinkvampyr.leprd.space/accessiblenet/directory",
-    "src": "accessiblenet.png",
-    "type": "button"
-  }, {
     "name": "debtdeath",
     "href": "https://debtdeath.neocities.org/",
     "src": "debtdeath.png",
@@ -72,11 +67,6 @@ scripts: '<script>
     "src": "inkcaps.png",
     "type": "button"
   }, {
-    "name": "Jasmine's Journal",
-    "href": "https://jasm1nii.xyz/",
-    "src": "jasmines_journal.png",
-    "type": "button"
-  }, {
     "name": "Just Fluffing Around",
     "href": "https://justfluffingaround.neocities.org/",
     "src": "justfluffingaround.png",
@@ -112,9 +102,9 @@ scripts: '<script>
     "src": "moonpr1sm.png",
     "type": "button"
   }, {
-    "name": "Owl's Roost",
-    "href": "https://owlsroost.xyz/",
-    "src": "owlsroost.png",
+    "name": "Beep Bird",
+    "href": "https://www.beepbird.net",
+    "src": "beepbird.png",
     "type": "button"
   }, {
     "name": "Neonaut",
@@ -140,11 +130,6 @@ scripts: '<script>
     "name": "Salixx",
     "href": "https://salixx.neocities.org/",
     "src": "salixx.png",
-    "type": "button"
-  }, {
-    "name": "Sanguine Royal",
-    "href": "https://sanguineroyal.com/",
-    "src": "sanguineroyal.png",
     "type": "button"
   }, {
     "name": "Sentimental Futurist",
@@ -209,12 +194,6 @@ scripts: '<script>
     "href": "https://kittygiraudel.com/",
     "bg": "#d97eb4",
     "color": "#222222",
-    "type": "link"
-  }, {
-    "name": "lolabee",
-    "href": "https://lolabee.neocities.org/",
-    "bg": "#facbd8",
-    "color": "#4f3d46",
     "type": "link"
   }, {
     "name": "no happy nonsense",
@@ -314,7 +293,7 @@ scripts: '<script>
     "type": "link"
   }, {
     "name": "Met Moxie",
-    "href": "https://metmoxie.com/",
+    "href": "https://moxiemoshpit.com",
     "src": "metmoxie.png",
     "type": "button"
   }, {
@@ -359,6 +338,12 @@ scripts: '<script>
     "href": "https://www.wavebeem.com/",
     "src": "wavebeem.webp",
     "type": "button"
+  }, {
+    "name": "Paul C",
+    "href": "https://paulcapewell.com",
+    "bg": "white",
+    "color": "black",
+    "type": "link"
   }
 ] %}
 
