--- a/content/links.njk
+++ b/content/links.njk
@@ -104,7 +104,7 @@ scripts: '<script>
   }, {
     "name": "Beep Bird",
     "href": "https://www.beepbird.net",
-    "src": "beepbird.png",
+    "src": "beepbird.webp",
     "type": "button"
   }, {
     "name": "Neonaut",
